terraform/compute.tf
# IAM role so EC2 can upload to S3 without access keys
data "aws_iam_policy_document" "ec2_assume_role" {
  statement {
    actions = ["sts:AssumeRole"]

    principals {
      type        = "Service"
      identifiers = ["ec2.amazonaws.com"]
    }
  }
}

# IAM Role for EC2
resource "aws_iam_role" "ec2_role" {
  name               = "${var.project_name}-ec2-role-v5"
  assume_role_policy = data.aws_iam_policy_document.ec2_assume_role.json
}

# IAM Policy allowing PutObject to S3 bucket
data "aws_iam_policy_document" "ec2_s3_policy" {
  statement {
    actions = ["s3:PutObject"]

    resources = [
      "arn:aws:s3:::${aws_s3_bucket.storage.bucket}/*"
    ]
  }
}

resource "aws_iam_policy" "ec2_s3_policy" {
  name   = "${var.project_name}-ec2-s3-policy-v5"
  policy = data.aws_iam_policy_document.ec2_s3_policy.json
}

# Attach Policy to EC2 Role
resource "aws_iam_role_policy_attachment" "ec2_s3_attach" {
  role       = aws_iam_role.ec2_role.name
  policy_arn = aws_iam_policy.ec2_s3_policy.arn
}

# Instance Profile for EC2 to use Role
resource "aws_iam_instance_profile" "ec2_instance_profile" {
  name = "${var.project_name}-ec2-instance-profile-v5"
  role = aws_iam_role.ec2_role.name
}

# Ubuntu 22.04 AMI (latest)
data "aws_ami" "ubuntu" {
  most_recent = true

  filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }

  filter {
    name   = "virtualization-type"
    values = ["hvm"]
  }

  owners = ["099720109477"] # Canonical
}

# EC2 instance which will later upload a txt file to S3
resource "aws_instance" "app" {
  ami                         = data.aws_ami.ubuntu.id
  instance_type               = "t3.micro"
  subnet_id                   = aws_subnet.public.id
  vpc_security_group_ids      = [aws_security_group.ec2_sg.id]
  associate_public_ip_address = true
  key_name                    = "aviav-proj-kp"  # your key pair

  iam_instance_profile = aws_iam_instance_profile.ec2_instance_profile.name

  # Minimal boot script (awscli installation handled by Jenkins)
  user_data = <<-EOF
              #!/bin/bash
              apt-get update -y
              EOF

  tags = {
    Name = "${var.project_name}-app-ec2"
  }
}
